Use standardcharset instead of pure string
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>